tests/paczka2/big_fuzzy/74081056.err
Error in line 16: r2RXaEtxgSP A136 97,8
Error in line 15: 5fds9owrWL A448 24,4
Error in line 38: 5fds9owrWL A609 30,9
Error in line 44: FuBpp A448 10,6
Error in line 54: A448 A448 273,59
Error in line 69: sPk4Tr A609 90,7
Error in line 71: sPk4Tr S72 37,2
Error in line 57: A448 A448 43,5
Error in line 83: 5fds9owrWL S72 73,7
Error in line 77: gK625 A609 22,4
Error in line 107: FuBpp A609 8,3
Error in line 118: sPk4Tr A136 14,6
Error in line 110: A448 A136 256,2
Error in line 130: A448 A448 15,2
Error in line 131: 5fds9owrWL A448 31,5
Error in line 139: r2RXaEtxgSP A609 -2,8
Error in line 135: sPk4Tr A136 93,7
Error in line 136: VGwFjDzql A136 44,4
Error in line 129: r2RXaEtxgSP A609 29,1
Error in line 154: r2RXaEtxgSP A136 97,1
Error in line 149: sPk4Tr S72 58,6
Error in line 165: gK625 A448 7,1
Error in line 164: FuBpp A448 69,7
Error in line 173: gK625 A448 11,4
Error in line 174: 5fds9owrWL A136 1,3
Error in line 186: gK625 A136 2845,9
Error in line 183: VGwFjDzql A448 45,7
Error in line 193: sPk4Tr A448 90,6
Error in line 198: sPk4Tr A136 87,3
Error in line 206: A448 S72 72,9
Error in line 222: sPk4Tr A136 6,7
Error in line 218: r2RXaEtxgSP A448 230,0
Error in line 239: sPk4Tr A136 64,4
Error in line 250: r2RXaEtxgSP A448 21,56
